--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ataur portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="top">
+        <div class="HALF">
+            <h1>Welcome To </h1>
+            <h1 > <span class="name">Ataur Rahman</span> World!</h1>
+               <h3>Build Climber and Train Stopper 
+               </h3>
+               <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+          </p>
+          <a class="link" target="_blank" href="https://www.facebook.com/profile.php?id=100006844984015">HIRE ME</a>
+            </div>
+           
+               <div class="HALF">
+                   <img src="my-bg.png" alt="">
+            </div>
+    </section>
     
 </body>
 </html>
