--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 > <span class="name">Ataur Rahman</span> World!</h1>
                <h3>Build Climber and Train Stopper 
                </h3>
-               <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+               <p> <b>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</b> 
           </p>
           <a class="link" target="_blank" href="https://www.facebook.com/profile.php?id=100006844984015">HIRE ME</a>
             </div>
@@ -23,6 +23,17 @@
                <div class="HALF">
                    <img src="my-bg.png" alt="">
             </div>
+    </section>
+    <section class="dream">
+        <div class="half wi">
+            <img src="my-bg2.png" alt="">
+        </div>
+        <div class="half wi">
+            <h2 class="dim">Dream Big</h2>
+            <h3 class="be">Become a web developer</h3>
+            <p> <b>already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics</p></b> 
+            <a class="link" target="_blank"  href="https://www.facebook.com/amirataur">facebook</a>
+        </div>
     </section>
     
 </body>
