--- a/index.html
+++ b/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ataur portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:ital,wght@1,200&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="top">
-        <div class="HALF">
-            <h1>Welcome To </h1>
-            <h1 > <span class="name">Ataur Rahman</span> World!</h1>
-               <h3>Build Climber and Train Stopper 
-               </h3>
-               <p> <b>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</b> 
-          </p>
-          <a class="link" target="_blank" href="https://www.linkedin.com/in/mohammad-ataur-rahman-sikder-6b7462192/>HIRE ME</a>
-            </div>
-           
-               <div class="HALF">
-                   <img src="my-bg.png" alt="">
-            </div>
+        <div class="hal">
+            <h1>Welcome To <br>
+                <span class="name">Ataur Rahman</span> World! </h1>
+                <p>
+                  <small>Build Climber and Train Stopper</small>
+                </p>
+            <p> 
+                You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.
+            </p>
+            <a class="link" target="_blank" href="https://www.linkedin.com/in/mohammad-ataur-rahman-sikder-6b7462192/>HIRE ME</a>
+        </div>
+       <div class="hal">
+           <img src="my-bg.png" alt=""></a>
+        </div>
     </section>
     <section class="dream">
-        <div class="half wi">
+        <div class="hal">
             <img src="my-bg2.png" alt="">
         </div>
-        <div class="half wi">
-            <h2 class="dim">Dream Big</h2>
-            <h3 class="be">Become a web developer</h3>
-            <p> <b>already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics</p></b> 
-            <a class="link" target="_blank"  href="https://www.facebook.com/amirataur">facebook</a>
+        <div class="hal">
+            <h1 class="dim">Dream Big</h1>
+            <h2 class="dim">Become a web developer</h2>
+            <p> <b>already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                    how to make simple website. My goal is to build 3 websites and learn advanced topics </b></p>
+            <a class="link" target="_blank" href="https://www.facebook.com/amirataur">facebook</a>
         </div>
     </section>
-    
+
 </body>
+
 </html>
